--- a/package.json
+++ b/package.json
@@ -7,24 +7,17 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [
-    "discord",
-    "bot",
-    "bump",
-    "cooldown",
-    "reminder"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "axios": "^1.3.4",
+    "discord.js": "^14.8.0",
+    "dotenv": "^16.0.3",
+    "qrcode": "^1.5.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=16.9.0"
+    "nodemon": "^2.0.22"
   }
 }
